Started on Games page

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 </head>
 
 <body>
-    <header class="site-name"> Comics <span id="and">And</span> <span id="G">Games</span></header>
-    <nav class="navbar" id="paegs"><a id="game" href="games.html">Games</a><a id=comic href="comics.html">Comics</a></nav>
+    <header class="site-name"> <span>Comics</span> <span id="and">And</span> <span id="G">Games</span>
+    </header>
+    <nav class="navbar" id="paegs"><a id="game" href="games.html">Games</a><a id=comic href="comics.html">Comics</a>
+    </nav>
     <main class="flex-main">
         <div class="img" id="left">
-            <a href="https://www.bungie.net/7/en/Destiny/Buy/TheFinalShape?gclid=169ef2ab321716a8a11794ca70881ce2&gclsrc=3p.ds&&utm_source=bing&utm_medium=paid_search&utm_campaign=Warp-Launch">
-            <img src="images/game-img.jpg" alt="Game Image" style="height: 100%; width: 100%; object-fit: contain;">
+            <a
+                href="https://www.bungie.net/7/en/Destiny/Buy/TheFinalShape?gclid=169ef2ab321716a8a11794ca70881ce2&gclsrc=3p.ds&&utm_source=bing&utm_medium=paid_search&utm_campaign=Warp-Launch">
+                <img src="images/game-img.jpg" alt="Game Image" style="height: 100%; width: 100%; object-fit: contain;">
             </a>
         </div>
         <div class="about-page" id="center">
@@ -27,7 +30,8 @@
         </div>
         <div class="img" id="right">
             <a href="https://www.marvel.com/comics/characters/1009610/spider-man_peter_parker">
-                <img src="images/comic-img.jpg" alt="Comic Image" style="height: 100%; width: 100%; object-fit: contain;">
+                <img src="images/comic-img.jpg" alt="Comic Image"
+                    style="height: 100%; width: 100%; object-fit: contain;">
             </a>
         </div>
     </main>
