--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <body>
     <header class="site-name"> Comics <span id="and">And</span> <span id="G">Games</span></header>
-    <nav class="navbar" id="paegs"><a id="game" href="games.html">Games</a><a id=comic href="comics.html">Comics</a></nav>
+    <nav class="navbar" id="pages">
+        <a id="game" href="games.html">Games</a>
+        <button id="theme-toggle" class="button is-dark">Toggle Theme</button>
+        <a id=comic href="comics.html">Comics</a>
+    </nav>
     <main class="flex-main">
         <div class="img" id="left">
             <a href="https://www.bungie.net/7/en/Destiny/Buy/TheFinalShape?gclid=169ef2ab321716a8a11794ca70881ce2&gclsrc=3p.ds&&utm_source=bing&utm_medium=paid_search&utm_campaign=Warp-Launch">
