Added code to Games.html file

--- a/games.html
+++ b/games.html
@@ -19,6 +19,18 @@
         </div>
     </nav>
     <main class="flexy-main">
+        <div class="left">
+            <button>Strategy</button>
+            <button>Shooter</button>
+            <button>MMORPG</button>
+            <div class="txt">
+                <p>Pick your Category And we'll do the rest! All games displayed will be Free to play and will be
+                    click-able, bringing you a direct link to the game you fancy the most!</p>
+            </div>
+        </div>
+        <div class="main">
+            
+        </div>
 
     </main>
 
