Added some image modals on games page and adjusted HTML accordingly

--- a/games.html
+++ b/games.html
@@ -23,17 +23,62 @@
             <button>Strategy</button>
             <button>Shooter</button>
             <button>MMORPG</button>
+            <button>FreeToGame</button>
             <div class="txt">
                 <p>Pick your Category And we'll do the rest! All games displayed will be Free to play and will be
                     click-able, bringing you a direct link to the game you fancy the most!</p>
             </div>
         </div>
         <div class="main">
-            
+            <img id="myImg" src="images/img-1.png" alt="Game Image" style="width:100%;max-width:300px">
+
+
+            <div id="myModal" class="modal">
+
+
+                <span class="close">&times;</span>
+
+
+                <img class="modal-content" id="img01">
+
+
+                <div id="caption"></div>
+            </div>
+            <img id="myImg" src="images/img-2.png" alt="Game Image" style="width:100%;max-width:300px">
+
+
+            <div id="myModal" class="modal">
+
+
+                <span class="close">&times;</span>
+
+
+                <img class="modal-content" id="img01">
+
+
+                <div id="caption"></div>
+            </div>
+            <img id="myImg" src="images/img-3.png" alt="Game Image" style="width:100%;max-width:300px">
+
+
+            <div id="myModal" class="modal">
+
+
+                <span class="close">&times;</span>
+
+
+                <img class="modal-content" id="img01">
+
+
+                <div id="caption"></div>
+            </div>
+
         </div>
+
 
     </main>
 
+    <script src="assets/js/games.js"></script>
 </body>
 
 </html>
