Added a link and made Games Page flex

--- a/games.html
+++ b/games.html
@@ -23,11 +23,13 @@
             <button>Strategy</button>
             <button>Shooter</button>
             <button>MMORPG</button>
-            <button>FreeToGame</button>
-            <div class="txt">
-                <p>Pick your Category And we'll do the rest! All games displayed will be Free to play and will be
-                    click-able, bringing you a direct link to the game you fancy the most!</p>
-            </div>
+            <a href="https://www.freetogame.com/">
+                <button>FreeToGame</button>
+            </a>
+                <div class="txt">
+                    <p>Pick your Category And we'll do the rest! All games displayed will be Free to play and will be
+                        click-able, bringing you a direct link to the game you fancy the most!</p>
+                </div>
         </div>
         <div class="main">
             <img id="myImg" src="images/img-1.png" alt="Game Image" style="width:100%;max-width:300px">
