--- a/comics.html
+++ b/comics.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/stylesheet.css" />
 </head>
 <body> 
-    <header>Comics!!!</header>
+    <header class="header">Comics!!!</header>
     <section>
         <nav>
             <ul>
@@ -45,5 +45,5 @@
 
     </main>
 </body>
-<script src=""></script>
+<script src="assets/js/comics.js"></script>
 </html>
