--- a/comics.html
+++ b/comics.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CaGs Comics</title>
-    <link rel="stylesheet" href="assets/css/stylesheet.css" />
+    <link rel="stylesheet" href="assets/css/comics.css" />
 </head>
 <body> 
     <header class="header">Comics!!!</header>
