Just some minor changes

--- a/games.html
+++ b/games.html
@@ -12,7 +12,7 @@
     <header class="Games">Games</header>
     <nav class="nav-bar">
         <div id="home">
-            <a href="index.html">home</a>
+            <a href="index.html">Home</a>
         </div>
         <div id="pow">
             <a href="comics.html">Comics</a>
