--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
         <div class="about-page" id="center">
             <h1>Brought to you By CaGs</h1>
-            <p>We made this page for fellow Gamers and comic lovers such as Ourselves.
-                One page to help you find your next game or your next read! here you can find
+            <p>We made this page for fellow Gamers and comic lovers such as ourselves.
+                One page to help you find your next game or your next read! Here you can find
                 all of your nerdy needs.
             </p>
         </div>
@@ -36,8 +36,19 @@
                     style="height: 100%; width: 100%; object-fit: contain;">
             </a>
         </div>
+    
     </main>
 
+    <footer class="foot">
+        <div class="links">        
+             <a id="profs" href="https://github.com/jocephuss" target="_blank">Josiah </a>
+             <a id="profs" href="https://github.com/TashinaMyers" target="_blank">Tashina </a>
+             <a id="profs" href="https://github.com/SergMart7" target="_blank">Sergio </a>            
+        </div>
+        <div>
+            <img id="catwshades" src="images/cat-with shades.jpeg" alt="Cat with shades image">
+        </div>
+    </footer>
 
     <script src="assets/js/javascript.js"></script>
 </body>
