Added another button

--- a/games.html
+++ b/games.html
@@ -20,9 +20,10 @@
     </nav>
     <main class="flexy-main">
         <div class="left">
-            <button>Strategy</button>
-            <button>Shooter</button>
-            <button>MMORPG</button>
+            <button id="btn1">Strategy</button>
+            <button id="btn2" >Shooter</button>
+            <button id="btn3">MMORPG</button>
+            <button id="btn4">Survival</button>
             <a href="https://www.freetogame.com/">
                 <button>FreeToGame</button>
             </a>
@@ -32,6 +33,7 @@
                 </div>
         </div>
         <div class="main">
+            <div class="results"></div>
             <img id="myImg" src="images/img-1.png" alt="Game Image" style="width:100%;max-width:300px">
 
 
