added css for header and nav bar

--- a/comics.html
+++ b/comics.html
@@ -9,8 +9,9 @@
 <body> 
     <header class="header">Comics!!!</header>
     <section>
-        <nav>
+        <nav class="nav-bar">
             <ul>
+                <li>Home</li>
                 <li>Games</li>
             </ul>
         </nav>  
