--- a/comics.html
+++ b/comics.html
@@ -10,9 +10,13 @@
     <header class="header">Comics!!!</header>
     <section>
         <nav class="nav-bar">
-            <ul>
-                <li>Home</li>
-                <li>Games</li>
+            <ul class>
+                <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="games.html">Games</a>
+            </li>
             </ul>
         </nav>  
         <header>Search Popular Titles</header>
