Added some more text to the homepage and adjusted font

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
             </a>
         </div>
         <div class="about-page" id="center">
-            <h1>Brought to you By CaGs</h1>
+            <h1>Brought to You By CaGs</h1>
             <p>We made this page for fellow Gamers and comic lovers such as ourselves.
                 One page to help you find your next game or your next read! Here you can find
-                all of your nerdy needs.
+                all of your nerdy needs. We've added an easter egg to one of our pages so feel free to look around, and
+                hopefully you find as much enjoyment in finding it as we did in creating it.
+                We've had fun on creating this project and hope you enjoy!
             </p>
         </div>
         <div class="img" id="right">
