games js done, and minor name changes in games.html

--- a/games.html
+++ b/games.html
@@ -33,7 +33,14 @@
                 </div>
         </div>
         <div class="main">
-            <div class="results"></div>
+            <div class="results">
+
+                <ul id="catch">
+
+                    <!--ELEMENTS CAUGHT FROM API RESULTS WILL BE RENDERED BELOW-->
+
+                </ul>
+            </div>
             <img id="myImg" src="images/img-1.png" alt="Game Image" style="width:100%;max-width:300px">
 
 
