changed background on games page colors

--- a/games.html
+++ b/games.html
@@ -24,8 +24,8 @@
             <button id="btn2" >Shooter</button>
             <button id="btn3">MMORPG</button>
             <button id="btn4">Survival</button>
-            <a href="https://www.freetogame.com/">
-                <button>FreeToGame</button>
+            <a href="https://www.giantbomb.com/">
+                <button>GiantBomb</button>
             </a>
                 <div class="txt">
                     <p>Pick your Category And we'll do the rest! All games displayed will be Free to play and will be
