--- a/games.html
+++ b/games.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="Games">Games</header>
+    <header class="Games"><h1>Games</h1></header>
     <nav class="nav-bar">
         <div id="home">
             <a href="index.html">Home</a>
@@ -26,6 +26,7 @@
             <button id="btn4">Survival</button>
             <a href="https://www.giantbomb.com/">
                 <button>GiantBomb</button>
+                <!-- https://www.freetogame.com/ -->
             </a>
                 <div class="txt">
                     <p>Pick your Category And we'll do the rest! All games displayed will be Free to play and will be
