fixed js bugs, rename on games.html

--- a/games.html
+++ b/games.html
@@ -35,7 +35,7 @@
         <div class="main">
             <div class="results">
 
-                <ul id="catch">
+                <ul class="catch">
 
                     <!--ELEMENTS CAUGHT FROM API RESULTS WILL BE RENDERED BELOW-->
 
