Changed .main to accommodate results

--- a/games.html
+++ b/games.html
@@ -35,6 +35,50 @@
             </div>
         </div>
         <div class="main">
+            <div class="gamepics">
+                <img id="myImg" src="images/img-1.png" alt="Game Image" style="width:100%;max-width:300px">
+
+
+                <div id="myModal" class="modal">
+
+
+                    <span class="close">&times;</span>
+
+
+                    <img class="modal-content" id="img01">
+
+
+                    <div id="caption"></div>
+                </div>
+                <img id="myImg" src="images/img-2.png" alt="Game Image" style="width:100%;max-width:300px">
+
+
+                <div id="myModal" class="modal">
+
+
+                    <span class="close">&times;</span>
+
+
+                    <img class="modal-content" id="img01">
+
+
+                    <div id="caption"></div>
+                </div>
+                <img id="myImg" src="images/img-3.png" alt="Game Image" style="width:100%;max-width:300px">
+
+
+                <div id="myModal" class="modal">
+
+
+                    <span class="close">&times;</span>
+
+
+                    <img class="modal-content" id="img01">
+
+
+                    <div id="caption"></div>
+                </div>
+            </div>
             <div class="results">
 
                 <ul class="catch">
@@ -43,49 +87,6 @@
 
                 </ul>
             </div>
-            <img id="myImg" src="images/img-1.png" alt="Game Image" style="width:100%;max-width:300px">
-
-
-            <div id="myModal" class="modal">
-
-
-                <span class="close">&times;</span>
-
-
-                <img class="modal-content" id="img01">
-
-
-                <div id="caption"></div>
-            </div>
-            <img id="myImg" src="images/img-2.png" alt="Game Image" style="width:100%;max-width:300px">
-
-
-            <div id="myModal" class="modal">
-
-
-                <span class="close">&times;</span>
-
-
-                <img class="modal-content" id="img01">
-
-
-                <div id="caption"></div>
-            </div>
-            <img id="myImg" src="images/img-3.png" alt="Game Image" style="width:100%;max-width:300px">
-
-
-            <div id="myModal" class="modal">
-
-
-                <span class="close">&times;</span>
-
-
-                <img class="modal-content" id="img01">
-
-
-                <div id="caption"></div>
-            </div>
-
         </div>
 
 
