--- a/comics.html
+++ b/comics.html
@@ -19,10 +19,10 @@
                 <li>
                     <a href="#Captain America">Captain America</a>
                 </li>
-                <li>
+                <li class="iron">
                     <a href="#Iron Man">Iron Man</a>
                 </li>
-                <li>
+                <li class="thor">
                     <a href="#Thor">Thor</a>
                 </li>
                 <li>
