"added iron and thor css to center text and changed scarlet witch to spider man"

--- a/comics.html
+++ b/comics.html
@@ -32,7 +32,7 @@
                     <a href="#Doctor Strange">Doctor Strange</a>
                 </li>
                 <li>
-                    <a href="#Scarlet Witch">Scarlet Witch</a>
+                    <a href="#Spider Man">Spider Man</a>
                 </li>
             </ul>
         </nav>
