Adjusted CSS to fit results better

--- a/games.html
+++ b/games.html
@@ -30,8 +30,9 @@
                 <button>FreeToGame</button>
             </a>
             <div class="txt">
-                <p>Pick your Category And we'll do the rest! All games displayed will be Free to play and will be
-                    click-able, bringing you a direct link to the game you fancy the most!</p>
+                <p>Pick your Category And we'll do the rest! All games displayed will be Free to play, Popular and
+                    found within FreeToGame Database! If you see something you like just click the FreeToGame button and
+                    find it there! </p>
             </div>
         </div>
         <div class="main">
