added kapow image and css framework

--- a/comics.html
+++ b/comics.html
@@ -38,10 +38,7 @@
         </nav>
         </section>
     <main>
-        <ul>
-            <li></li>
-        </ul>
-
+        <img class="kapow_image" src="https://a0.anyrgb.com/pngimg/948/936/reyna-roy-lichtenstein-super-hero-comic-strip-text-effect-pop-art-comic-book-hero-batman-superhero.png" alt="comic strip kapow">
     </main>
 </body>
 <script src="assets/js/comics.js"></script>
