--- a/comics.html
+++ b/comics.html
@@ -40,6 +40,9 @@
     <main>
         <img class="kapow_image" src="https://a0.anyrgb.com/pngimg/948/936/reyna-roy-lichtenstein-super-hero-comic-strip-text-effect-pop-art-comic-book-hero-batman-superhero.png" alt="comic strip kapow">
     </main>
+    <footer class="credits">
+        <p>Works of Josiah, Sergio, and Tashina (2024).</p>
+    </footer>
 </body>
 <script src="assets/js/comics.js"></script>
 </html>
