comics.js done and minor name change in comics.html

--- a/comics.html
+++ b/comics.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CaGs Comics</title>
     <link rel="stylesheet" href="assets/css/comics.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 </head>
 <body> 
     <header class="header">Comics!!!</header>
@@ -32,7 +33,7 @@
                     <a href="#Doctor Strange">Doctor Strange</a>
                 </li>
                 <li>
-                    <a href="#Spider Man">Spider Man</a>
+                    <a href="#Spider-Man">Spider Man</a>
                 </li>
             </ul>
         </nav>
