changed the nav bar

--- a/comics.html
+++ b/comics.html
@@ -9,12 +9,10 @@
 </head>
 <body> 
     <header class="header">Comics!!!</header>
-    <section class="nav-bar">
-        <nav>
+        <nav class="nav-bar">
                 <a href="index.html">Home</a>
                 <a href="games.html">Games</a>
         </nav> 
-    </section> 
         <header class="search">Search Popular Titles Below!</header>
         <nav>
             <ul>
