added css for javascript stuff

--- a/comics.html
+++ b/comics.html
@@ -40,7 +40,7 @@
     <main>
         <img class="kapow_image" id="powImg" src="https://a0.anyrgb.com/pngimg/948/936/reyna-roy-lichtenstein-super-hero-comic-strip-text-effect-pop-art-comic-book-hero-batman-superhero.png" alt="comic strip kapow">
     </main>
-    <aside>
+    <aside class="comics">
         <ul>
             <li></li>
         </ul>
