--- a/comics.html
+++ b/comics.html
@@ -38,7 +38,9 @@
         </nav>
         </section>
     <main>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" easter egg>
         <img class="kapow_image" id="powImg" src="https://a0.anyrgb.com/pngimg/948/936/reyna-roy-lichtenstein-super-hero-comic-strip-text-effect-pop-art-comic-book-hero-batman-superhero.png" alt="comic strip kapow">
+        </a>
     </main>
     <aside class="comics">
         <ul>
