Adjusted a few things

--- a/games.html
+++ b/games.html
@@ -93,6 +93,8 @@
 
     </main>
 
+    <footer id="foots"><p>Works of Josiah, Sergio, and Tashina (2024).</p></footer>
+
     <script src="assets/js/games.js"></script>
 </body>
 
