--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <div class="about-page" id="center">
-            <h1>Brought to You By CaGs</h1>
+            <h1>Brought to You By T.S.J</h1>
             <p>We made this page for fellow Gamers and comic lovers such as ourselves.
                 One page to help you find your next game or your next read! Here you can find
                 all of your nerdy needs. We've added an easter egg to one of our pages so feel free to look around, and
