--- a/comics.html
+++ b/comics.html
@@ -43,7 +43,7 @@
         </a>
     </main>
     <aside class="comics">
-        <ul>
+        <ul class="spider">
             <li></li>
         </ul>
     </aside>
