--- a/comics.html
+++ b/comics.html
@@ -11,6 +11,7 @@
     <header class="header">Comics!!!</header>
         <nav class="nav-bar">
                 <a href="index.html">Home</a>
+                <a href="blog.html">Blog</a>
                 <a href="games.html">Games</a>
         </nav> 
         <header class="search">Search Popular Titles Below!</header>
