Added a posts button to navbar on the games page

--- a/games.html
+++ b/games.html
@@ -16,6 +16,7 @@
         <div id="home">
             <a href="index.html">Home</a>
         </div>
+        <div> <a id="posts" href="blog.html">See posts</a> </div>
         <div id="pow">
             <a href="comics.html">Comics</a>
         </div>
@@ -93,7 +94,9 @@
 
     </main>
 
-    <footer id="foots"><p>Works of Josiah, Sergio, and Tashina (2024).</p></footer>
+    <footer id="foots">
+        <p>Works of Josiah, Sergio, and Tashina (2024).</p>
+    </footer>
 
     <script src="assets/js/games.js"></script>
 </body>
