added css for blog

--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <button id="toggle-theme">Dark Mode</button>
+        <p class="and">Comics and Games Blog</p>
         <button id="back-button">Back</button>
     </header>
     <main id="posts-container">
