--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
                 hopefully you find as much enjoyment in finding it as we did in creating it.
                 We've had fun on creating this project and hope you enjoy!
             </p>
-            <p id="info">This is a search engine bringing You popular and top pics aswell as providing a link on where
-                to find the
-                results.</p>
+            <p id="info">This is a library that brings you popular and top picks of both games and comics</p>
         </div>
         <div class="img" id="right">
             <a href="https://www.marvel.com/comics/characters/1009610/spider-man_peter_parker">
