changed navbar button to blog

--- a/games.html
+++ b/games.html
@@ -16,7 +16,7 @@
         <div id="home">
             <a href="index.html">Home</a>
         </div>
-        <div> <a id="posts" href="blog.html">See posts</a> </div>
+        <div> <a id="posts" href="blog.html">Blog</a> </div>
         <div id="pow">
             <a href="comics.html">Comics</a>
         </div>
