--- a/games.html
+++ b/games.html
@@ -25,15 +25,16 @@
         <div class="left">
             <button id="btn1">Strategy</button>
             <button id="btn2">Shooter</button>
-            <button id="btn3">MMORPG</button>
-            <button id="btn4">Survival</button>
-            <a href="https://www.freetogame.com/">
-                <button>FreeToGame</button>
+            <button id="btn3">Action</button>
+            <button id="btn4">Adventure</button>
+            <button id="btn5">RPG</button>
+            <button id="btn6">Free Games</button>
+            <a href="https://rawg.io/">
+                <button>RAWG</button>
             </a>
             <div class="txt">
-                <p>Pick your Category And we'll do the rest! All games displayed will be Free to play, Popular and
-                    found within FreeToGame Database! If you see something you like just click the FreeToGame button and
-                    find it there! </p>
+                <p>Results will be popular titles in selected genre. RAWG button to find reviews, download links and
+                    more information on your favorite games. </p>
             </div>
         </div>
         <div class="main">
