added functions to additional buttons

--- a/games.html
+++ b/games.html
@@ -28,7 +28,7 @@
             <button id="btn3">Action</button>
             <button id="btn4">Adventure</button>
             <button id="btn5">RPG</button>
-            <button id="btn6">Free Games</button>
+            <button id="btn6">Puzzle</button>
             <a href="https://rawg.io/">
                 <button>RAWG</button>
             </a>
