polished some more

--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,9 @@
         <!-- POST ARE ADDED DYNAMICALLY BELOW VIA BLOG.JS -->
 
     </main>
+    <footer>
+        <p>Works of Josiah, Sergio, and Tashina (2024).</p>
+    </footer>
     <script src="./assets/js/blog.js" defer></script>
 </body>
 </html>
